--- a/package.json
+++ b/package.json
@@ -1,18 +1,7 @@
 {
-  "name": "googlebooks-app",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server/server.js",
-  "scripts": {
-    "start": "node server/server.js",
-    "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
-    "install": "cd server && npm i && cd ../client && npm i",
-    "build": "cd client && npm run build"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "concurrently": "^5.1.0"
+  "dependencies": {
+    "apollo-server-express": "^2.15.0",
+    "mongodb": "^4.4.1",
+    "node": "^17.7.1"
   }
 }
