--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "dependencies": {
     "apollo-server-express": "^2.15.0",
-    "mongodb": "^4.4.1",
-    "node": "^17.7.1"
+    "express": "^4.17.3"
   }
 }
