--- a/package.json
+++ b/package.json
@@ -1,6 +1,25 @@
 {
-  "dependencies": {
-    "apollo-server-express": "^2.15.0",
-    "express": "^4.17.3"
+  "name": "final_project-gogo",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server/server.js",
+    "develop": "concurrently \"cd server && npm run start\" \"cd client && npm start\"",
+    "install": "cd server && npm i && cd ../client && npm i",
+    "build": "cd client && npm run build"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/RayFlaherty/final_project-gogo.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/RayFlaherty/final_project-gogo/issues"
+  },
+  "homepage": "https://github.com/RayFlaherty/final_project-gogo#readme",
+  "devDependencies": {
+    "concurrently": "^7.0.0"
   }
 }
